# independent-reviews

./: .gitignore  docker-compose.migrate.yaml  docker-compose.pgadmin.yaml  docker-compose.yaml  dockerfile  pyproject.toml
configs/: config.toml  config.toml.example  dbPassword
src/: ISICVerifier.py  commons.py  config.py  main.py
src/dumpers/ais_stu/: main.py
src/handlers/: __init__.py  full_text_search.md  registration.py  reviews.py  reviews_common.py  start.py
src/sql/: README.md  __init__.py  models.py  reviews.py  sqlc.yaml  subjects.py  users.py  util.py
src/sql/fulltext_dicts/: README.md
src/sql/migrations/: 20250501190540_base_schema.down.sql  20250501190540_base_schema.up.sql  20250501192337_base_data.down.sql  20250501192337_base_data.up.sql  20250507165138_reviews_add_marks.down.sql  20250507165138_reviews_add_marks.up.sql  20250507190207_subjects_add_semester.down.sql  20250507190207_subjects_add_semester.up.sql  20250508150714_subjects_add_serial_and_sub_code.down.sql  20250508150714_subjects_add_serial_and_sub_code.up.sql  20250508153342_subjects_modify_aisid_unique.down.sql  20250508153342_subjects_modify_aisid_unique.up.sql  20250528065715_subjects_make_marks_not_dumb.down.sql  20250528065715_subjects_make_marks_not_dumb.up.sql  20250528070231_add_autoincrement_to_ids.down.sql  20250528070231_add_autoincrement_to_ids.up.sql  20250529115118_add_full_text_search.down.sql  20250529115118_add_full_text_search.up.sql  README.md
src/sql/queries/: reviews.sql  subjects.sql  users.sql
